# boost-cmake-hello-world

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  hello.cpp
